fixed bg stretch

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,7 +29,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: contain;
-    background-size: 1400px;
+    background-size: 100%;
 }
 
 
